fix dark mode style

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,8 +9,8 @@
 
   .underline-nav{
     @apply font-black text-sm before:absolute before:w-full before:h-0.5 before:left-0 before:bottom-0 
-    before:bg-black before:scale-x-0 before:block hover:before:scale-x-100 before:origin-top-right 
-    hover:before:origin-top-left before:transition-transform before:duration-300 
+    before:bg-black dark:before:bg-white before:scale-x-0 before:block hover:before:scale-x-100 
+    before:origin-top-right hover:before:origin-top-left before:transition-transform before:duration-300 
   }
 
   .marquee-li{
